# rrgb-web

./: .env.sample  Cargo.toml  Dockerfile  README.md
.cargo/: config
public/: index.html
scripts/: build.sh
src/: error.rs  main.rs
src/controller/: controller.rs
src/server/: server.rs
